--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Code:You Student Bio</title>
     <link rel="stylesheet" href="styles.css">
-</head>
+</head  <script>
+    "Hello world! 
+   I'm a developer."
+</script>
 <body>
     <div class="container">
-        <header>
+        <header> 
             <h1>Student Bio</h1>
         </header>
+
         
         <div class="bio-card">
             <div class="photo">
-                <img src="https://via.placeholder.com/150" alt="Student Photo">
+                <img src="IMG_0395.jpeg" alt="Your Name">
             </div>
             <div class="bio">
-                <h2>John Doe</h2>
-                <p>Hi, I'm John, a passionate software developer currently enrolled in the Code:You bootcamp. I love building responsive web applications and constantly exploring new technologies.</p>
+                <h2>Penelopi Hynes</h2>
+                <p>Hi, I'm Penelopi, aspiring web developer. I'm a passionate and motivated student in the world of coding. I am currently enrolled in Code:You Bootcamp.</p>
             </div>
         </div>
 
